# shatter

./: Cargo.toml  README.md
.github/workflows/: ci.yml
shatter-macros/: Cargo.toml
shatter-macros/src/: lib.rs  progress.rs
src/: app.rs  error.rs  lib.rs  main.rs  telemetry.rs  terminal.rs
src/cli/: command.rs  mod.rs  render.rs
src/media/: image_preprocessor.rs  mod.rs  panel_dimensions.rs  render_size.rs
src/transition/: error.rs  gpu.rs  mod.rs  quantize.wgsl  request.rs  service.rs  shatter.wgsl
tests/: render_command.rs
