[package]
name = "shatter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
bytemuck = "1.25.0"
clap = { version = "4.5.60", features = ["derive"] }
gif = "0.14.1"
image = "0.25.9"
indicatif = "0.18.4"
kamadak-exif = "0.6.1"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
pollster = "0.4.0"
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shatter-macros = { version = "0.1.0", path = "shatter-macros" }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
wgpu = "26.0.1"

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
tempfile = "3.25.0"
